--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,14 +1,11 @@
 #-------------------------------
 # General Site Settings
 
-title: Kross
+title: edgesets
 logo: 
-author: themefisher
+author: qlin
 description: this is meta description
-email: steve.fruits@email.com
-phone: +880 2544 658 256
-address: 125/A, CA Commercial Area, California, USA
-copyright: Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Getjekyllthemes](https://getjekyllthemes.com)
+email: xcodeman@gmail.com
 
 menu:
 - {name: About, link: '/about'}
